# chagos

./: .gitignore  README.md  all_extracted_data.json  config.py  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
extractor/: pdf_getter.py  pdf_image_extractor.py  pdf_text_extractor.py  zip_extractor.py
tests/: test_extractor.py
